resources/assets/sass/pages/znajdzLokal.scss
.znajdzLokal {
    background: #E5E5E5;
    padding-top: 60px;
    padding-bottom: 100px;

    &__title {
        text-align: left;
        font-size: 32px;
        line-height: 44px;

        @include breakpoint($md) {
            font-size: 50px;
            line-height: 60px;
            margin-bottom: 35px;
        }
    }

    &__line {
        background: #DADADA;
        margin-bottom: 20px;
    }

    &__wrapper {
        display: flex;
        flex-direction: column;

        @include breakpoint($md) {
            flex-direction: row;
            margin-top: 50px;
        }
    }

    &__item {
        background: $white;
        display: flex;
        margin-bottom: 20px;
        margin: 0 20px 20px;
        box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
        flex-direction: column;
        padding: 27px 20px 0;

        @include breakpoint($md) {
            margin: 0 0 20px;
            flex-direction: row;
            padding: 38px 38px 38px 80px;
        }

        .lokal__btns {
            flex-direction: column;

            @include breakpoint($md) {
                margin-left: auto;
                order: 3;
                justify-content: flex-start;

                .btn {
                    width: 100%;

                    &:last-child {
                        margin-bottom: 0;
                    }
                }
            }
        }

        &__title {
            font-size: 28px;
            line-height: 38px;
            text-transform: uppercase;
            color: #262359;
            display: block;
            font-weight: 800;

            @include breakpoint($md) {
                color: #8F8F8F;
                margin-right: 20px;
            }
        }

        &__inwestycja {
            font-weight: 800;
            font-size: 15px;
            line-height: 32px;
            display: block;
            text-transform: uppercase;

            color: #8F8F8F;
            margin-bottom: 10px;

            @include breakpoint($md) {
                font-size: 28px;
                line-height: 38px;
                color: #262359;
            }
        }

        &__copy {
            margin-bottom: 24px;

            @include breakpoint($md) {
                margin-bottom: 0;
                order: 2;

                &__title {
                    display: flex;
                }
            }
        }

        .line {
            margin-bottom: 24px;

            @include breakpoint($md) {
                display: none;
            }
        }

        figure {
            margin-left: auto;
            margin-right: auto;
            margin-bottom: 24px;

            @include breakpoint($md) {
                min-width: 150px;
                margin-bottom: 0;
                order: 1;
                margin-right: 80px;
                margin-left: unset;
            }
        }

        @include breakpoint($md) {

            .lokal__twoColumns {
                margin-bottom: 5px;
            }
        }
    }

    &__main {
        width: 100%;

        &__meta {
            @include breakpoint($md) {
                display: flex;
                justify-content: space-between;
            }

            &__content {
                font-weight: 800;
                font-size: 14px;
                line-height: 19px;
                margin-bottom: 16px;
                /* identical to box height */

                text-transform: uppercase;

                /* GREY-DARK */

                color: #8F8F8F;

                .--sort {
                    color: $darkBlue;
                    padding: 0 22px 0 10px;

                    font-weight: 800;
                    font-size: 14px;
                    line-height: 19px;
                    margin-bottom: 0;
                    text-transform: uppercase;
                    color: #262359;
                    position: relative;
                    border: 0;
                    background: transparent;

                    &:after {
                        content: '';
                        width: 12px;
                        height: 6px;
                        background: url('../images/sort.svg') right center no-repeat;
                        display: block;
                        right: 0;
                        top: 6px;
                        position: absolute;
                    }

                    &.mixitup-control-active {
                        display: none;
                    }

                    &.sortDown {


                        &:after {
                            transform: rotate(180deg);
                        }


                    }
                }

                .--blue {
                    color: $darkBlue;
                }
            }
        }
    }

    &__filters {


        width: 100%;

        display: none;
        padding: 92px 10px 0;
        background: #fff;
        margin-bottom: 20px;

        position: absolute;
        top: 0;
        z-index: 10000;
        min-height: 100vh;

        @include breakpoint($md) {
            max-width: 280px;
            display: block;
            padding: 0;
            background: initial;
            margin-right: 62px;
            margin-bottom: 0;
            min-height: initial;
            position: relative;
            top: initial;
        }

        .filtry__title {
            margin-bottom: 18px;

            @include breakpoint($md) {
                display: none;
            }
        }

        &__title {
            font-weight: 800;
            font-size: 14px;
            line-height: 19px;
            margin-bottom: 16px;

            text-transform: uppercase;

            /* DARK BLUE */

            color: #262359;
        }

        &__item {
            &.--inwestycje {}

            &__singleZdjecie {
                @include breakpoint($md) {
                    opacity: 0.9;

                    p {
                        font-size: 14px;
                        line-height: 19px;
                        color: #000000;
                    }
                }
            }

            &__wrapp {
                /*
                display: flex;
                flex-wrap: wrap;

                .znajdzLokal__filters__item__singleZdjecie {
                    width: 48%;
                }
                */
            }

            .controls {
                .wpcf7-acceptance .wpcf7-list-item-label {
                    font-size: 14px;
                    line-height: 19px;
                    color: #000000;
                }

                margin-bottom: 20px;

                .wpcf7-acceptance span.wpcf7-list-item {
                    margin: 0;
                    margin-bottom: 10px;
                }

                &.smaller-margin {
                    margin-bottom: 7px;
                }

                &.dodatkowe {
                    .wpcf7-acceptance .wpcf7-list-item-label {
                        text-transform: capitalize;
                    }
                }
            }

            .extra-controls {
                margin-bottom: 28px;
            }
        }

        &__close {
            width: 80px;
            height: 80px;
            background: url('../images/filters_close.svg') center no-repeat;
            position: absolute;
            top: 0;
            right: 0;
            border: 0;
            cursor: pointer;

        }

        &__clear {
            border: 1px solid $darkBlue;
            margin-top: 0;
            margin-bottom: 30px;

            @include breakpoint($md) {
                display: none;
            }
        }
    }

    .--filtry {
        background: transparent;
        border: 1px solid #DADADA;
        margin-top: 0;
        margin-bottom: 40px;
        width: 100%;
        text-align: center;

        span {
            font-weight: 800;
            font-size: 12px;
            line-height: 16px;
            text-align: center;
            text-transform: uppercase;
            color: #8F8F8F;
            padding-left: 30px;
            background: url('../images/filtry.svg') left center no-repeat;
        }

        @include breakpoint($md) {
            display: none;
        }
    }

    .--noRelative {
        position: initial;
    }
}

.noUi-horizontal {
    width: 100%;
    max-width: 350px;
    margin-right: auto;
}



ul.checkboxTest {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    li {
        max-width: 48%;
        margin-bottom: 22px;
        width: 100%;
    }
}

.checkboxTest {
    span.wpcf7-list-item {
        margin: 0;
        margin-bottom: 10px;
    }

    input[type="checkbox"][id^="cb"] {
        display: none;
    }

    &__title {
        font-size: 14px;
        line-height: 19px;
        color: #000000;
    }

    label {

        display: block;
        position: relative;
        margin-bottom: 6px;

        cursor: pointer;
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
    }

    label::before {
        background-color: white;
        color: white;
        content: " ";
        display: block;
        border-radius: 50%;
        border: 1px solid grey;
        position: absolute;
        top: 7px;
        left: 7px;
        width: 20px;
        height: 20px;
        text-align: center;
        line-height: 28px;
        transition-duration: 0.4s;
        transform: scale(0);
    }

    label img {

        transition-duration: 0.2s;
        transform-origin: 50% 50%;
        opacity: 0.4;
        width: 100%;
    }

    :checked+label {
        border-color: #ddd;
    }

    :checked+label::before {
        content: "";
        background: $darkBlue url('../images/check_mark.svg') center no-repeat;
        transform: scale(1);
    }

    :checked+label img {
        border: 2px solid $darkBlue;
        z-index: -1;
        opacity: 1;
    }
}

.extra-controls {
    display: flex;
    justify-content: space-between;

    input {
        background: transparent;
        border: none;
        width: 50px;
        font-size: 14px;
        line-height: 19px;
        text-transform: uppercase;
        font-weight: 800;
        color: #8F8F8F;

        &:last-child {
            text-align: right;
        }

    }
}

.tax-inwestycja {

    .--inwestycje,
    .--typ {
        display: none;
    }
}

.pagination {

    a,
    span {
        margin-right: 10px;
        font-size: 14px;
        line-height: 19px;
        margin-bottom: 16px;
        text-transform: uppercase;
        color: #8F8F8F;
        font-weight: 800;
        cursor: pointer;
    }

    .jp-current {

        color: $darkBlue;
    }

    .jp-disabled {
        display: none;
    }
}

